Made mac title text appear centered w/ corrected spacing

--- a/midnight/css/base.css
+++ b/midnight/css/base.css
@@ -5333,7 +5333,7 @@ img[src*="/assets/9e8f566e6d49e8f4bba138e1d6a50578.svg"] {
 
 .macButtons-2MuSAC::before {
 	content: var(--theme-long-name);
-	left: 50%;
+	left: calc(50% - 31px);
 	text-shadow: 0 0 12px;
 	font-weight: 600;
 	color: var(--accent);
@@ -5342,7 +5342,7 @@ img[src*="/assets/9e8f566e6d49e8f4bba138e1d6a50578.svg"] {
 
 .macButtons-2MuSAC::after {
 	content: var(--theme-version);
-	left: calc(50% + 52px);
+	left: calc(50% + 31px);
 	text-shadow: 0 0 12px;
 	font-weight: 400;
 	color: rgba(255, 255, 255, 0.8);
